shifted gears to new chrome extension project using pretrained model

--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -515,6 +515,233 @@
     "# --- Model Summary ---\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91f9cd40",
+   "metadata": {},
+   "source": [
+    "Pivoting Prhect Ideas "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "deb2cdc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1001 files belonging to 2 classes.\n",
+      "Found 388 files belonging to 2 classes.\n",
+      "Found 229 files belonging to 2 classes.\n",
+      "Sample Training Dataset:\n",
+      "Image batch shape: (32, 224, 224, 3)\n",
+      "Labels batch shape: (32, 1)\n",
+      "\n",
+      "Sample Validation Dataset:\n",
+      "Image batch shape: (32, 224, 224, 3)\n",
+      "Labels batch shape: (32, 1)\n",
+      "\n",
+      "Sample Test Dataset:\n",
+      "Image batch shape: (32, 224, 224, 3)\n",
+      "Labels batch shape: (32, 1)\n",
+      "\n",
+      "Datasets with preprocessing applied:\n",
+      "Processed image batch dtype: <dtype: 'float32'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import os\n",
+    "\n",
+    "# Define the main directory of your dataset\n",
+    "main_dataset_dir = 'Midjourney_Exp2'  # Replace with the actual path\n",
+    "\n",
+    "# Define image size and batch size for MobileNetV3\n",
+    "image_height = 224\n",
+    "image_width = 224\n",
+    "batch_size = 32\n",
+    "\n",
+    "# Function to load a dataset from a directory\n",
+    "def load_dataset(directory):\n",
+    "    dataset = tf.keras.utils.image_dataset_from_directory(\n",
+    "        directory,\n",
+    "        labels='inferred',\n",
+    "        label_mode='binary',  # Assuming 'FAKE' and 'REAL' will be 0 and 1\n",
+    "        image_size=(image_height, image_width),\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True  # Shuffle the training data\n",
+    "    )\n",
+    "    return dataset\n",
+    "\n",
+    "# Load the training, validation, and test datasets\n",
+    "train_dir = os.path.join(main_dataset_dir, 'train')\n",
+    "valid_dir = os.path.join(main_dataset_dir, 'valid')\n",
+    "test_dir = os.path.join(main_dataset_dir, 'test')\n",
+    "\n",
+    "sample_train = load_dataset(train_dir)\n",
+    "sample_valis = load_dataset(valid_dir)\n",
+    "sample_test = load_dataset(test_dir)\n",
+    "\n",
+    "# Print some information about the loaded datasets\n",
+    "print(\"Sample Training Dataset:\")\n",
+    "for image_batch, labels_batch in sample_train.take(1):\n",
+    "    print(\"Image batch shape:\", image_batch.numpy().shape)\n",
+    "    print(\"Labels batch shape:\", labels_batch.numpy().shape)\n",
+    "\n",
+    "print(\"\\nSample Validation Dataset:\")\n",
+    "for image_batch, labels_batch in sample_valis.take(1):\n",
+    "    print(\"Image batch shape:\", image_batch.numpy().shape)\n",
+    "    print(\"Labels batch shape:\", labels_batch.numpy().shape)\n",
+    "\n",
+    "print(\"\\nSample Test Dataset:\")\n",
+    "for image_batch, labels_batch in sample_test.take(1):\n",
+    "    print(\"Image batch shape:\", image_batch.numpy().shape)\n",
+    "    print(\"Labels batch shape:\", labels_batch.numpy().shape)\n",
+    "\n",
+    "# Optional: Preprocessing function to normalize pixel values\n",
+    "def preprocess(image, label):\n",
+    "    image = tf.image.convert_image_dtype(image, dtype=tf.float32)\n",
+    "    return image, label\n",
+    "\n",
+    "sample_train = sample_train.map(preprocess)\n",
+    "sample_valis = sample_valis.map(preprocess)\n",
+    "sample_test = sample_test.map(preprocess)\n",
+    "\n",
+    "print(\"\\nDatasets with preprocessing applied:\")\n",
+    "for image_batch, labels_batch in sample_train.take(1):\n",
+    "    print(\"Processed image batch dtype:\", image_batch.dtype)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "32b5d08e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ssl\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d839644e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v3/weights_mobilenet_v3_small_224_1.0_float_no_top_v2.h5\n",
+      "4334752/4334752 [==============================] - 0s 0us/step\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " MobilenetV3small (Function  (None, 7, 7, 576)         939120    \n",
+      " al)                                                             \n",
+      "                                                                 \n",
+      " global_average_pooling2d (  (None, 576)               0         \n",
+      " GlobalAveragePooling2D)                                         \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 576)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 577       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 939697 (3.58 MB)\n",
+      "Trainable params: 577 (2.25 KB)\n",
+      "Non-trainable params: 939120 (3.58 MB)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting pretrained MobileNetV3 model\n",
+    "\n",
+    "from tensorflow.keras.applications import MobileNetV3Small  # Or MobileNetV3Large\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
+    "# Choose the MobileNetV3 variant (Small is generally more efficient)\n",
+    "base_model = MobileNetV3Small(\n",
+    "    include_top=False,  # Don't include the classification head\n",
+    "    weights='imagenet', # Load weights pre-trained on ImageNet\n",
+    "    input_shape=(image_height, image_width, 3)\n",
+    ")\n",
+    "\n",
+    "# Freeze the base model layers\n",
+    "base_model.trainable = False\n",
+    "\n",
+    "# Add a custom classification head\n",
+    "global_average_layer = layers.GlobalAveragePooling2D()\n",
+    "prediction_layer = layers.Dense(1, activation='sigmoid')  # Binary classification (real/fake)\n",
+    "\n",
+    "# Create the final model\n",
+    "model = models.Sequential([\n",
+    "    base_model,\n",
+    "    global_average_layer,\n",
+    "    layers.Dropout(0.5),\n",
+    "    prediction_layer\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Print the model summary to see the architecture\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b1dfd94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "32/32 [==============================] - 12s 315ms/step - loss: 0.8256 - accuracy: 0.5145 - val_loss: 0.6725 - val_accuracy: 0.6031\n",
+      "Epoch 2/10\n",
+      "32/32 [==============================] - 11s 302ms/step - loss: 0.7075 - accuracy: 0.6014 - val_loss: 0.6027 - val_accuracy: 0.6881\n",
+      "Epoch 3/10\n",
+      "32/32 [==============================] - 11s 305ms/step - loss: 0.6509 - accuracy: 0.6444 - val_loss: 0.5724 - val_accuracy: 0.7294\n",
+      "Epoch 4/10\n",
+      "32/32 [==============================] - 11s 304ms/step - loss: 0.5902 - accuracy: 0.6913 - val_loss: 0.5648 - val_accuracy: 0.7216\n",
+      "Epoch 5/10\n",
+      "32/32 [==============================] - 11s 300ms/step - loss: 0.5752 - accuracy: 0.7043 - val_loss: 0.5390 - val_accuracy: 0.7397\n",
+      "Epoch 6/10\n",
+      "32/32 [==============================] - 11s 300ms/step - loss: 0.5285 - accuracy: 0.7353 - val_loss: 0.5297 - val_accuracy: 0.7577\n",
+      "Epoch 7/10\n",
+      "32/32 [==============================] - 11s 301ms/step - loss: 0.5315 - accuracy: 0.7473 - val_loss: 0.5180 - val_accuracy: 0.7526\n",
+      "Epoch 8/10\n",
+      "32/32 [==============================] - 11s 300ms/step - loss: 0.4979 - accuracy: 0.7552 - val_loss: 0.5076 - val_accuracy: 0.7706\n",
+      "Epoch 9/10\n",
+      "32/32 [==============================] - 11s 298ms/step - loss: 0.4900 - accuracy: 0.7602 - val_loss: 0.5076 - val_accuracy: 0.7603\n",
+      "Epoch 10/10\n",
+      "32/32 [==============================] - 11s 303ms/step - loss: 0.4612 - accuracy: 0.7842 - val_loss: 0.4955 - val_accuracy: 0.7680\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 10  # You can adjust the number of epochs\n",
+    "\n",
+    "history = model.fit(\n",
+    "    sample_train,\n",
+    "    epochs=epochs,\n",
+    "    validation_data=sample_valis\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
