--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -942,6 +942,25 @@
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(true_labels, predicted_classes, target_names=['Fake', 'Real']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ec1d3822",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/keras/src/engine/training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "largemodel.save('larger_model.h5')"
+   ]
   }
  ],
  "metadata": {
