--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -961,6 +961,16 @@
    "source": [
     "largemodel.save('larger_model.h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "961a247c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model"
+   ]
   }
  ],
  "metadata": {
